--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,8 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+html {
+  scroll-behavior: smooth;
 }/*# sourceMappingURL=index.css.map */
