--- a/src/styles/Principal.css
+++ b/src/styles/Principal.css
@@ -4,11 +4,14 @@ body {
 body .principal {
   background-image: url("../images/background-image.png");
   height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body .about-me-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 50vh;
 }
 body .about-me-container .about-me-titulo {
   color: #0d214f;
