--- a/src/styles/Principal.scss
+++ b/src/styles/Principal.scss
@@ -1,19 +1,22 @@
-body{
+body {
     background-color: deepskyblue;
 
-    .principal{
-        background-image: url('../images/background-image.png');
+    .principal {
+        background-image: url("../images/background-image.png");
         height: 100vh;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
-    .about-me-container{
+    .about-me-container {
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 50vh;
 
-        .about-me-titulo{
+        .about-me-titulo {
             color: #0d214f;
         }
-        .about-me-texto{
+        .about-me-texto {
             color: #0d214f;
             width: 800px;
             margin: 0 auto;
