--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body::-webkit-scrollbar {
+  width: 0.6rem;
+}
+body::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: darkblue;
+  border-radius: 15px;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
