--- a/src/styles/Principal.css
+++ b/src/styles/Principal.css
@@ -2,7 +2,7 @@ body {
   background-color: deepskyblue;
 }
 body .principal {
-  background-image: url("../images/background-image.png");
+  background-image: url('../images/background-image.png');
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,4 +20,4 @@ body .about-me-container .about-me-texto {
   color: #0d214f;
   width: 800px;
   margin: 0 auto;
-}/*# sourceMappingURL=Principal.css.map */
+} /*# sourceMappingURL=Principal.css.map */
