--- a/src/styles/Principal.scss
+++ b/src/styles/Principal.scss
@@ -1,25 +1,25 @@
 body {
-    background-color: deepskyblue;
+  background-color: deepskyblue;
 
-    .principal {
-        background-image: url("../images/background-image.png");
-        height: 100vh;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .about-me-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 50vh;
+  .principal {
+    background-image: url('../images/background-image.png');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .about-me-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
 
-        .about-me-titulo {
-            color: #0d214f;
-        }
-        .about-me-texto {
-            color: #0d214f;
-            width: 800px;
-            margin: 0 auto;
-        }
+    .about-me-titulo {
+      color: #0d214f;
     }
+    .about-me-texto {
+      color: #0d214f;
+      width: 800px;
+      margin: 0 auto;
+    }
+  }
 }
