--- a/src/styles/Principal.css
+++ b/src/styles/Principal.css
@@ -2,7 +2,7 @@ body {
   background-color: deepskyblue;
 }
 body .principal {
-  background-image: url('../images/background-image.png');
+  background-image: url('../images/background.jpg');
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
