Alterando paltea de cores e identação

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 body::-webkit-scrollbar {
-  width: 0.6rem;
+  width: 0.4rem;
 }
 body::-webkit-scrollbar-track {
   background: rgba(255, 255, 255, 0);
@@ -15,7 +13,7 @@ body::-webkit-scrollbar-track {
   transition: ease-in 500ms;
 }
 body::-webkit-scrollbar-thumb {
-  background-color: darkblue;
+  background-color: #282828;
   border-radius: 15px;
   -webkit-transition: ease 500ms;
   transition: ease 500ms;
@@ -24,14 +22,13 @@ body::-webkit-scrollbar-thumb:active {
   background-color: #ffffff;
   -webkit-transition: ease 500ms;
   transition: ease 500ms;
-  border: 2px solid darkblue;
+  border: 2px solid #282828;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 html {
   scroll-behavior: smooth;
-} /*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
