--- a/src/styles/Principal.css
+++ b/src/styles/Principal.css
@@ -1,8 +1,8 @@
 body {
-  background-color: deepskyblue;
+  background-color: #0d0d0d;
 }
 body .principal {
-  background-image: url('../images/background.jpg');
+  background-image: url("../images/background.jpg");
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -14,10 +14,10 @@ body .about-me-container {
   height: 50vh;
 }
 body .about-me-container .about-me-titulo {
-  color: #0d214f;
+  color: #fff;
 }
 body .about-me-container .about-me-texto {
-  color: #0d214f;
+  color: #fff;
   width: 800px;
   margin: 0 auto;
-} /*# sourceMappingURL=Principal.css.map */
+}/*# sourceMappingURL=Principal.css.map */
