--- a/src/styles/Principal.scss
+++ b/src/styles/Principal.scss
@@ -1,8 +1,8 @@
 body {
-  background-color: deepskyblue;
+  background-color: #0d0d0d;
 
   .principal {
-    background-image: url('../images/background-image.png');
+    background-image: url('../images/background.jpg');
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,10 +14,10 @@ body {
     height: 50vh;
 
     .about-me-titulo {
-      color: #0d214f;
+      color: #fff;
     }
     .about-me-texto {
-      color: #0d214f;
+      color: #fff;
       width: 800px;
       margin: 0 auto;
     }
