fix: Corrigindo posição dos itens

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -4,9 +4,8 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-  gap: 800px;
-  margin-left: 113px;
-  margin-right: 113px
+  padding-left: 113px;
+  padding-right: 113px
 }
 
 .links {
