--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,11 +1,12 @@
 @import '../../../styles/theme/index.scss';
 
 .container {
-  position: fixed;
+  position: static;
   display: flex;
   justify-content: space-between;
   padding-left: 113px;
-  padding-right: 113px
+  padding-right: 113px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .links {
