--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,30 +1,6 @@
 @import './theme/';
-@import url('https://fonts.googleapis.com/css2?family=Exo:wght@900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-
-@mixin BigTitle() {
-  font-family: 'Exo', sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 64px;
-  line-height: 77%;
-}
-
-@mixin MediumTitle() {
-  font-family: 'Rubik', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 88px;
-}
-
-@mixin SubText() {
-  font-family: 'Rubik', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 130%;
-}
+@import './mixins/';
+@import './fonts.scss';
 
 * {
   margin: 0;
@@ -37,8 +13,6 @@
       width: 100vw;
   }
 }
-
-
 
 img {
   -webkit-touch-callout: none;
