--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,20 +1,94 @@
 @import '../../../styles/theme/index.scss';
 
+@keyframes open {
+  0% {
+    width: 0;
+    opacity: 0.2;
+  }
+  100% {
+    width: 75%;
+    opacity: 1;
+  }
+}
+
+.hamburger {
+  display: none;
+  padding: 10px 2%;
+  cursor: pointer;
+  z-index: 1000;
+}
+
 .container {
-  position: static;
+  position: fixed;
   display: flex;
   justify-content: space-between;
-  padding-left: 113px;
-  padding-right: 113px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+
+  .links,
+  .icons {
+    margin: 0 7% 0 7%;
+  }
+
+  .links {
+    gap: 55px;
+
+    a {
+      &:hover {
+        transition: all 0.3s ease-in-out;
+        transform: translateY(-3px);
+      }
+    }
+  }
+
+  .icon {
+    color: $accent;
+    order: 1;
+    flex-grow: 0;
+
+    &:hover {
+      transition: all 0.3s ease-in-out;
+      transform: translateY(-3px);
+    }
+  }
 }
 
-.links {
-  gap: 55px;
-}
 
-.icon {
-  color: $accent;
-  order: 1;
-  flex-grow: 0;
+@media (max-width: 1000px) {
+  .hamburger {
+    display: block;
+    position: relative;
+  }
+
+  .container {
+    position: absolute;
+    max-width: 100vw;
+    width: 75%;
+    top: 0;
+    left: -100%;
+    min-height: 100vh;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10rem;
+    background: $background;
+    z-index: 999;
+
+    & > * {
+      display: flex;
+      justify-content: center;
+    }
+
+    .links {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .icons {
+      flex-direction: row;
+    }
+  }
+  .open {
+    animation: open 0.8s ease-in-out;
+    left: 0;
+  }
 }
