--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -137,6 +137,20 @@
   }
 }
 
+@media (max-width: 1100px) {
+  .projetosSection {
+    flex-direction: column;
+    h2 {
+      font-size: 4rem;
+    }
+
+    img {
+      width: 40rem;
+      height: 30rem;
+    }
+  }
+}
+
 @media (max-width: 1000px) {
   .homeSection {
     flex-direction: column;
@@ -152,6 +166,18 @@
 
     aside {
       display: none;
+    }
+  }
+
+  .projetosSection {
+    margin-top: 40rem;
+    h2 {
+      font-size: 3.5rem;
+    }
+
+    img {
+      width: 35rem;
+      height: 25rem;
     }
   }
 }
@@ -184,6 +210,18 @@
       }
     }
   }
+
+  .projetosSection {
+    margin-top: 45rem;
+    h2 {
+      font-size: 3rem;
+    }
+
+    img {
+      width: 30rem;
+      height: 20rem;
+    }
+  }
 }
 
 @media (max-width: 480px) {
@@ -205,6 +243,18 @@
           grid-template-columns: repeat(2, 1fr);
         }
       }
+    }
+  }
+
+  .projetosSection {
+    margin-top: 55rem;
+    h2 {
+      font-size: 2.5rem;
+    }
+
+    img {
+      width: 25rem;
+      height: 15rem;
     }
   }
 }
