--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,48 +1,55 @@
-@import '../../../styles/theme/index.scss';
-
-@keyframes open {
-  0% {
-    width: 0;
-    opacity: 0.2;
-  }
-  100% {
-    width: 75%;
-    opacity: 1;
-  }
-}
+@import "../../../styles/theme/index.scss";
+@import "../../../styles/mixins.scss";
 
 .hamburger {
-  display: none;
-  padding: 10px 2%;
-  cursor: pointer;
-  z-index: 1000;
-  width: 100vw;
+  margin: 10px;
+  z-index: 999;
 }
 
 .container {
+  max-width: 100vw;
+  width: 100%;
+  min-height: 5rem;
   position: fixed;
-  display: flex;
-  justify-content: space-between;
+  @include DisplayFlex(space-between, center);
+  background: $background;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 
-  .links,
+  ul,
   .icons {
     margin: 0 7% 0 7%;
   }
 
-  .links {
+  ul {
+    @include DisplayFlex(flex-start, center);
+    justify-content: flex-start;
+    list-style: none;
+    flex-grow: 1;
     gap: 55px;
 
-    a {
-      &:hover {
+    li {
+      a {
+        text-decoration: none;
+        color: $text;
+        font-size: 1.2rem;
+        font-weight: 500;
         transition: all 0.3s ease-in-out;
-        transform: translateY(-3px);
+        &:hover {
+          transition: all 0.3s ease-in-out;
+          transform: translateY(-3px);
+        }
       }
     }
   }
 
+  .icons {
+    @include DisplayFlex(flex-end, center);
+    gap: 2rem;
+  }
+
   .icon {
     color: $accent;
+    display: flex;
     order: 1;
     flex-grow: 0;
 
@@ -50,46 +57,5 @@
       transition: all 0.3s ease-in-out;
       transform: translateY(-3px);
     }
-  }
-}
-
-
-@media (max-width: 1000px) {
-  .hamburger {
-    display: block;
-    position: relative;
-  }
-
-  .container {
-    position: absolute;
-    max-width: 100vw;
-    width: 75%;
-    top: 0;
-    left: -100%;
-    min-height: 100vh;
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10rem;
-    background: $background;
-    z-index: 999;
-
-    & > * {
-      display: flex;
-      justify-content: center;
-    }
-
-    .links {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .icons {
-      flex-direction: row;
-    }
-  }
-  .open {
-    animation: open 0.8s ease-in-out;
-    left: 0;
   }
 }
