--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -1,25 +1,5 @@
-@import "../../styles/theme/index.scss";
-@import "../../styles/mixins.scss";
-
-@keyframes open {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
+@import "../../styles/theme/index";
+@import "../../styles/mixins";
 
 .homeSection {
   max-width: 100vw;
@@ -37,12 +17,12 @@
       max-width: 37rem;
       width: 100%;
       color: $text;
-      margin: -5rem 3rem 0 0;
+      margin: -5rem 3rem 3rem 0;
 
       h2 {
-        @include BigTitle();
         text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
         max-width: 100%;
+        @include BigTitle();
         color: $accent;
       }
     }
