--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/theme/index.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../styles/theme/index";
+@import "../../../styles/mixins";
 
 .hamburger {
   margin: 10px;
