--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,6 @@
-@import './theme/';
-@import './mixins/';
-@import './fonts.scss';
+@import "./theme";
+@import "./mixins";
+@import "./fonts";
 
 * {
   margin: 0;
@@ -9,8 +9,8 @@
 
 @media (max-width: 1080px) {
   html {
-      font-size: 93.75%;
-      width: 100vw;
+    font-size: 93.75%;
+    width: 100vw;
   }
 }
 
@@ -25,7 +25,7 @@ img {
 
 @media (max-width: 720px) {
   html {
-      font-size: 87.5%;
+    font-size: 87.5%;
   }
 }
 
